# mads_capstone_mAb_machine

./: .gitignore  README.md  eda_notebook.ipynb  pyproject.toml  requirements.txt  run_pipeline.py
data/embeddings/: ankh_vh.pkl  ankh_vl.pkl  esmc_vh.pkl  esmc_vl.pkl  prost_t5_vh.pkl  prost_t5_vl.pkl  prot_t5_vh.pkl  prot_t5_vl.pkl  protbert_vh.pkl  protbert_vl.pkl
data/modeling/: .~lock.final_results_20260410_2029.csv#  ankh_model_df.pkl  cdr_features_titer.csv  ensemble_weights_20260410_2127.csv  ensemble_weights_20260414_1847.csv  error_correlation_20260410_2147.csv  error_correlation_20260414_1847.csv  esmc_model_df.pkl  failure_overlap_20260414_1604.csv  failure_overlap_20260414_1847.csv  final_results.csv  final_results_20260406_2330.csv  final_results_20260406_2333.csv  final_results_20260406_2334.csv  final_results_20260409_1817.csv  final_results_20260409_1910.csv  final_results_20260410_2013.csv  final_results_20260410_2021.csv  final_results_20260410_2029.csv  final_results_20260410_2057.csv  final_results_20260410_2147.csv  final_results_20260414_1847.csv  holdout_eval_20260414_1932.csv  prost_t5_model_df.pkl  prot_t5_model_df.pkl  protbert_model_df.pkl
data/processed/: antibody_developability_cleaned.csv
data/raw/: GDPa1_246 IgGs_cleaned.csv  GDPa3_80 IgGs_full.xlsx
data/test_data/: cleaned_holdout_data.csv  cleaned_holdout_data_with_aho.csv
notebooks/: eda_notebook.ipynb  holdout_cleanup.ipynb  post_hoc.ipynb
src/CDR_work/: cdr_feature_utils.py  cdr_features_titer.py  cdr_features_titer_unzip.py  cdr_multiassay_spearman.py  (+3 more)
src/models/: ankh.py  (+5 more)
(+84 files in other folders)
